<resources>
    <string name="app_name">STEP UP</string>

    //General
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="ok">OK</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="continues">Continue</string>
    <string name="view">View</string>
    <string name="confirm">Confirm</string>
    <string name="finish">Finish</string>

    //Home screen
    <string name="my_work">My Works</string>
    <string name="my_service">My Services</string>
    <string name="service">Services</string>
    <string name="my_order">My Orders</string>
    <string name="profile">Profile</string>

    //Welcome screen
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="does_not_have_an_account">Doesn\'t have an account?</string>
    <string name="continue_as_guest">Continue as guest</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    //Login sign up screen
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number_passport_optional">ID/Passport number (optional)</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="we_would_like_to_know_a_little_about_you">We would like to know a little about you.</string>
    <string name="what_is_your_job_status">What is your job status?</string>
    <string name="student">Student</string>
    <string name="self_employment">Self Employment</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>
    <string name="passionate_worker">Passionate Worker</string>
    <string name="other">Other</string>
    <string name="just_a_little_more">Just a little more to go!!🎉🎊</string>
    <string name="all_set_let_s_go">All set let’s go !!🎉🎊</string>
    <string name="account_has_been_created">Account has been Created</string>
    <string name="may_we_know_your_name">May we know your name?</string>
    <string name="your_name_optional">Your name (optional)</string>

    //My service screen
    <string name="create_service">Create Service</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="attachment">Attachment (Optional)</string>
    <string name="add_more">Add More</string>
    <string name="price">Price</string>
    <string name="service_type">Service Type</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="summary">Summary</string>
    <string name="title_text">Title :</string>
    <string name="description_text">Description :</string>
    <string name="price_text">Price :</string>
    <string name="service_type_text">Service Type :</string>
    <string name="start_date_text">Start Date :</string>
    <string name="end_date_text">End Date :</string>
    <string name="attachment_text">Attachment :</string>
    <string name="service_has_been_created">Service has been created</string>
    <string name="service_attachment">Service Attachment</string>
    <string name="activate">Activate Service</string>
    <string name="deactivate">Deactivate Service</string>
    <string name="reactivate_service">Reactivate Service</string>
    <string name="please_select_start_and_end_date">Please select start and end date.</string>

    <string-array name="service_type_spinner">
        <item>Select A Service Type</item>
        <item>Software Development</item>
        <item>Graphic Design</item>
    </string-array>

    //Profile screen
    <string name="logout">Logout</string>
    <string name="id_number">ID/Passport number</string>
    <string name="job">Job</string>
    <string name="balance">Balance</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="score">Score</string>
    <string name="top_up">Top Up</string>
    <string name="amount_text">Amount :</string>>
    <string name="please_select_an_option">Please select an option</string>
    <string name="register_as_freelancer">Register as freelancer to use this feature.</string>
    <string name="register">Register</string>
    <string name="we_need_addition_info">We need addition info to register you as a freelancer</string>
    <string name="please_enter_your_info_below">Please enter your info below</string>
    <string name="national_id">National ID</string>
    <string name="passport">Passport</string>
    <string name="id">ID</string>
    <string name="registered_as_freelancer">Registered as freelancer!</string>

    //Service screen
    <string name="search">Search</string>
    <string name="max_price">Max price</string>
    <string name="search_by_service_title">Search by service title</string>
    <string name="filter_by_service_price">Filter by service price</string>
    <string name="filter_by_service_type">Filter by service type</string>
    <string name="buy">Buy</string>
    <string name="order_service">Order Service</string>
    <string name="terms_and_agreement">Terms and Agreement</string>
    <string name="i_have_read_and_agreed">I have read and agreed to Terms and Agreement</string>
    <string name="expected_start_date">Expected Start Date</string>
    <string name="expected_end_date">Expected End Date</string>
    <string name="expected_start_date_text">Expected Start Date :</string>
    <string name="expected_end_date_text">Expected End Date :</string>
    <string name="place_order">Place Order</string>
    <string name="order_has_been_placed">Order has been placed</string>
    <string name="vat_text">VAT :</string>
    <string name="total_text">Total :</string>
    <string name="note_text">Note :</string>
    <string name="discount_text">Discount :</string>

    //My work screen
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="complete">Complete</string>
    <string name="resource">Resource</string>
    <string name="status_text">Status :</string>
    <string name="email_text">Email :</string>
    <string name="expected_date_text">Expected date :</string>
    <string name="accepted_at_text">Accepted at :</string>
    <string name="order_by_text">Order by :</string>
    <string name="no_file_selected">No file selected</string>
    <string name="select_file">Select File</string>
    <string name="upload">Upload</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel_description_text">Cancel Description :</string>
    <string name="download_work">Download Work</string>
    <string name="file">File</string>
    <string name="freelancer_has_completed_the_work">Freelancer has completed the work.</string>

    //My order screen
    <string name="freelancer_text">Freelancer :</string>
    <string name="rate_us">Rate Us</string>

    //Placeholder
    <string name="_100">100</string>
    <string name="_0">0</string>

</resources>