<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/selected_color"
    tools:context=".ui.my_service.CreateServiceSummaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="end"
            android:fontFamily="@font/museomoderno_bold"
            android:maxLines="1"
            android:text="@string/summary"
            android:textColor="@color/primary_color"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/description_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/serviceType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/service_type_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/start_date_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/end_date_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/attachment_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/attachmentRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:overScrollMode="never"
            tools:itemCount="3"
            tools:listitem="@layout/item_attachment" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/primary_color_border_drawable"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:letterSpacing="0"
                app:icon="@drawable/icon_back"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/createServiceBtn"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/logo_color"
                android:insetTop="0dp"
                android:letterSpacing="0"
                android:insetBottom="0dp"
                android:text="@string/create"
                android:textAllCaps="false"
                android:textColor="@color/selected_color"
                app:cornerRadius="10dp"
                app:icon="@drawable/icon_next"
                app:iconGravity="textEnd"
                app:iconTint="@color/selected_color" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>