<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corner_dark_background"
        android:orientation="vertical"
        android:paddingVertical="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reactivate_service"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/please_select_start_and_end_date"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/logo_color_border_drawable"
            android:hint="@string/start_date"
            android:nextFocusDown="@+id/description"
            android:paddingVertical="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/logo_color_border_drawable"
            android:hint="@string/end_date"
            android:nextFocusDown="@+id/description"
            android:paddingVertical="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/logo_color_border_drawable"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@null" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/logo_color"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/selected_color"
                android:textSize="15sp"
                app:cornerRadius="10dp" />


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>